assets/site/css/styles.css
main > .skrollable-before,
main > .skrollable-after {
  display: none;
}
.night .day-only {
  display: none !important;
}
html {
  height: 100%;
}
body {
  min-height: 100%;
  background-size: cover;
  background-position: 50% 50%;
  background-image: url("../img/main-background.jpg");
  background-attachment: fixed;
  overflow-x: hidden;
  font-family: 'chunkfiveroman';
}
@media (min-width: 767px) {
  body {
    padding-top: 50px;
  }
}
body.js .js-hide {
  display: none;
}
section {
  width: 100%;
  height: 100%;
}
.no-overflow {
  overflow: hidden;
  padding-bottom: 100%;
}
.skrollable {
  /*
   * First-level skrollables are positioned relative to window
   */
  position: fixed;
  /*
   * Skrollables by default have a z-index of 100 in order to make it easy to position elements in front/back without changing each skrollable
   */
  z-index: 100;
}
.skrollr-mobile .skrollable {
  /*
      May cause issues on Android default browser (see #331 on GitHub).
  */
  position: absolute;
}
.skrollable .skrollable {
  position: static;
}
@media (max-width: 767px) {
  .navbar-default {
    background: none;
    border: none;
  }
  .navbar-default .navbar-toggle,
  .navbar-default .navbar-collapse {
    background-color: #f8f8f8;
  }
  .navbar-default .navbar-header {
    position: absolute;
    width: 100%;
    z-index: 1;
  }
}
.navbar {
  z-index: 1030;
}
h1 {
  font-family: 'motion_picture_personal_useRg';
  color: white;
  font-size: 50px;
  text-shadow: black 0.1em 0.1em 0.2em;
}
#home {
  display: table;
  width: 100%;
  height: 100%;
}
#home h1 {
  display: table-cell;
  vertical-align: middle;
  font-size: 50px;
  text-align: center;
  text-shadow: black 0.1em 0.1em 0.2em;
  color: white;
  position: static;
}
@media (min-width: 768px) {
  #home h1 {
    font-size: 100px;
  }
}
#home .name {
  display: inline-block;
  text-align: center;
  padding: 0 0.2em;
  font-size: 1.2em;
}
#home small {
  display: block;
  color: white;
}
#home .massive {
  font-size: 2.1em;
}
#home .nospace {
  line-height: 0;
  display: inline-block;
  margin-bottom: -1em;
}
#home .proudly {
  font-family: 'chunkfiveroman';
  font-size: 30%;
}
#church {
  background-size: 80%;
  background-position: left -100px bottom;
  background-image: url("../img/_src/164718775.jpg");
  color: white;
  background-repeat: no-repeat;
  background-color: red;
}
#taxis {
  background-size: cover;
  background-position: 50% 50%;
  background-image: url("../img/_src/85926251.jpg");
}
#taxis h1 {
  color: white;
}
#reception {
  background-size: cover;
  background-position: 50% 50%;
  background-image: url("../img/reception.jpg");
}
#reception h1 {
  color: white;
}
#gifts {
  background-size: cover;
  background-position: 50% 50%;
  background-image: url("../img/_src/160058802.jpg");
}
#gifts h1 {
  text-shadow: none;
}
#hotels {
  background-size: cover;
  background-position: 50% 50%;
  background-image: url("../img/_src/186246894.jpg");
}
#hotels h1 {
  color: white;
  text-shadow: black 0.1em 0.1em 0.2em;
}
#rsvp {
  background: none;
  color: white;
}
#rsvp form {
  background-color: rgba(0, 0, 0, 0.7);
}

